<resources>
    <string name="app_name">MQTT Android Condrol</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example Mqtt settings -->
    <string name="pref_header_mqtt">MQTT</string>

    <string name="mqtt_server">Server</string>
    <string name="mqtt_port">Port</string>
    <string name="mqtt_login">Login</string>
    <string name="mqtt_pass">Password</string>
    <string name="mqtt_sec">SSL / TLS</string>

    <string-array name="mqtt_sec_list_titles">
        <item>SSL</item>
        <item>TLS</item>
    </string-array>
    <string-array name="mqtt_sec_list_values">
        <item>SSL</item>
        <item>TLS</item>
    </string-array>


    <!-- Example Mqtt settings -->
    <string name="pref_header_general">General</string>

    <string name="general_summary_start_on">Run applications when you turn on</string>
    <string name="general_title_start_on">Autostart boot</string>
    <string name="general_summary_start_net">Run the application when the connection is changed</string>
    <string name="general_title_start_net">Autostart connection</string>


    <string-array name="general_list_titles">
        <item>No</item>
        <item>1min</item>
        <item>5min</item>
        <item>10min</item>
        <item>30min</item>
        <item>60min</item>
    </string-array>
    <string-array name="general_list_values">
        <item>0</item>
        <item>60</item>
        <item>300</item>
        <item>600</item>
        <item>1800</item>
        <item>3600</item>
    </string-array>

    <!--<string name="general_start_net">Port</string>-->
    <!--<string name="general">Login</string>-->
    <!--<string name="general">Password</string>-->
    <!--<string name="general">SSL / TLS</string>-->

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="button_send_text">Send</string>
    <string name="buttone_text_start">Start</string>
    <string name="mqtt_text_topic">topic</string>
    <string name="mqtt_text_value">value</string>
    <string name="textButtonStart_start">Start</string>
    <string name="textButtonStart_stop">Stop</string>
    <string name="adout">This application allows you to manage the android device using MQTT</string>
    <string name="LinkGit"><a href="https://github.com/bondrogeen/CLAW">GitHub</a></string>
    <string name="LinkDonations"><a href="https://www.paypal.com/uk/cgi-bin/webscr?cmd=_flow&amp;SESSION=a6fdUwoxwFwhl3G7-xMpphJFpU1MdR5j7e6aXceAexkVXvx1kO5UPgVoeUm&amp;dispatch=5885d80a13c0db1f8e263663d3faee8db8175432b4df92754f4b4adb5a123d61&amp;rapidsState=Donation__DonationFlow___StateDonationLogin&amp;rapidsStateSignature=1560267b9cd1d2b8f4086d57be0ea95ce65d51c1">Donations</a></string>
    <string name="action_about">About</string>
    <string name="mqtt_device">Name device</string>
    <string name="general_title_timer">Data sending period</string>
    <string name="appwidget_text">Claw</string>
    <string name="add_widget">Add widget</string>
    <string name="action_log">Log</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="large_text"></string>
    <string name="pref_header_send_data">Send Options</string>
    <string name="send_data_title_battery">Battery</string>
    <string name="send_data_summary_battery">Battery status information</string>
    <string name="mqtt_first_topic">Start topic</string>

</resources>
