<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="false"
        android:key="general_startBoot"
        android:summary="@string/general_summary_start_on"
        android:title="@string/general_title_start_on" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="general_startNet"
        android:summary="@string/general_summary_start_net"
        android:title="@string/general_title_start_net" />


    <ListPreference
        android:defaultValue="0"
        android:entries="@array/general_list_titles"
        android:entryValues="@array/general_list_values"
        android:key="general_list_timer"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/general_title_timer" />

    <!--<SwitchPreference-->
        <!--android:defaultValue="false"-->
        <!--android:key="general_switch"-->
        <!--android:summary="@string/mqtt_summary_switch"-->
        <!--android:title="@string/mqtt_title" />-->

</PreferenceScreen>
